# ucp-search-local

./: README.md
ucp-search-enginelocal/ucp-search-engine/: README.md  demo.html  docker-compose.yml  quickstart.ps1  quickstart.sh
ucp-search-enginelocal/ucp-search-engine/mobile/android/: SQLiteSearchBackend.kt
ucp-search-enginelocal/ucp-search-engine/mobile/ios/: SearchViewController.swift  SearchViewModel.swift
ucp-search-enginelocal/ucp-search-engine/server/: Dockerfile  package.json
ucp-search-enginelocal/ucp-search-engine/server/api/: search-controller.ts  seed-elastic.ts  server.ts
ucp-search-enginelocal/ucp-search-engine/server/indexing/: elastic-mapping.json  sync-service.ts
ucp-search-enginelocal/ucp-search-engine/shared/: context-engine.ts  search-orchestrator.ts  types.ts
ucp-search-enginelocal/ucp-search-engine/wasm/: Cargo.toml  build.sh
ucp-search-enginelocal/ucp-search-engine/wasm/src/: lib.rs
ucp-search-enginelocal/ucp-search-engine/web/: search-shell.tsx
ucp-search-enginelocal/ucp-search-engine/web/backends/: elastic-backend.ts  trie-backend.ts
ucp-search-enginelocal/ucp-search-engine/web/components/: preview-pane.tsx  result-list.tsx  search-input.tsx
ucp-search-enginelocal/ucp-search-engine/web/styles/: search-shell.css
ucp-search-enginelocal/ucp-search-engine/web/workers/: trie-worker.js
