[package]
name = "ucp-trie-search"
version = "0.1.0"
edition = "2021"
authors = ["UCP Engineering <eng@ucp.io>"]
description = "WebAssembly trie search module for UCP cross-platform search engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = 3
lto = true
